--- a/keil/empty_LP_MSPM0G3507_nortos_keil.uvprojx
+++ b/keil/empty_LP_MSPM0G3507_nortos_keil.uvprojx
@@ -474,6 +474,16 @@
               <FileType>5</FileType>
               <FilePath>..\Hardware\jy901s.h</FilePath>
             </File>
+            <File>
+              <FileName>sr04.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Hardware\sr04.c</FilePath>
+            </File>
+            <File>
+              <FileName>sr04.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Hardware\sr04.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
